Cleanup and deploy the sitemap

--- a/iWork.Web.UI/iView/Contacts/form.html
+++ b/iWork.Web.UI/iView/Contacts/form.html
@@ -1,9 +1,10 @@
-﻿<layout iv-source="Empty.html">
+﻿<layout iv-source="Partial.html">
     <content>
         <form iv-type="form"
               iv-title="Contact Form"
               iv-name="contactForm"
               iv-model="ivContact"
+              iv-show-modal="false"
               iv-controller="Contact"
               iv-single-submit="true"
               iv-action="update">
