--- a/iWork.Web.UI/iView/kitchensink/grid-ajax.html
+++ b/iWork.Web.UI/iView/kitchensink/grid-ajax.html
@@ -1,20 +1,23 @@
-﻿<control>
-    <grid iv-type="datatables"
-          iv-title="Ajax Grid"
-          iv-name="ajaxGrid"
-          iv-controller="Contact"
-          iv-url="/content/sample_data/grid.json"
-          iv-ordering="true"
-          iv-display-length="15"
-          iv-state-save="true"
-          iv-serverside="false">
-        <grid iv-type="column" iv-title="Name" iv-data="name" iv-targets="0"></grid>
-        <grid iv-type="column" iv-title="Position" iv-data="position" iv-targets="1"></grid>
-        <grid iv-type="column" iv-title="salary" iv-data="salary" iv-targets="2"></grid>
-        <grid iv-type="column" iv-title="start_date" iv-data="start_date" iv-targets="3"></grid>
-        <grid iv-type="column" iv-title="office" iv-data="office" iv-targets="4"></grid>
-        <grid iv-type="column" iv-title="extn" iv-data="extn" iv-targets="5"></grid>
-        <grid iv-type="column" iv-title="Edit button" iv-kind="btn.edite" iv-target-form="contactForm" iv-targets="6" iv-width="100"></grid>
-        <grid iv-type="column" iv-title="Delete button" iv-kind="btn.delete" iv-targets="7" iv-width="100"></grid>
-    </grid>
-</control>
+﻿<layout iv-source="Partial.html">
+    <content>
+        <grid iv-type="datatables"
+              iv-title="Ajax Grid"
+              iv-name="ajaxGrid"
+              iv-controller="Contact"
+              iv-url="/content/sample_data/grid.json"
+              iv-ordering="true"
+              iv-display-length="15"
+              iv-state-save="true"
+              iv-serverside="false">
+            <grid iv-type="column" iv-title="Name" iv-data="name" iv-targets="0"></grid>
+            <grid iv-type="column" iv-title="Position" iv-data="position" iv-targets="1"></grid>
+            <grid iv-type="column" iv-title="salary" iv-data="salary" iv-targets="2"></grid>
+            <grid iv-type="column" iv-title="start_date" iv-data="start_date" iv-targets="3"></grid>
+            <grid iv-type="column" iv-title="office" iv-data="office" iv-targets="4"></grid>
+            <grid iv-type="column" iv-title="extn" iv-data="extn" iv-targets="5"></grid>
+            <grid iv-type="column" iv-title="Edit button" iv-kind="btn.edite" iv-target-form="contactForm" iv-targets="6" iv-width="100"></grid>
+            <grid iv-type="column" iv-title="Delete button" iv-kind="btn.delete" iv-targets="7" iv-width="100"></grid>
+        </grid>
+    </content>
+</layout>
+
