--- a/iWork.Web.UI/iView/kitchensink/password.html
+++ b/iWork.Web.UI/iView/kitchensink/password.html
@@ -1,35 +1,36 @@
-﻿<content>
-    <form iv-type="form"
-          iv-title="Mask Sink"
-          iv-name="formValidation"
-          iv-model="ivContact"
-          iv-controller="Contact"
-          iv-action="add">
-        <fieldset>
-            <input iv-type="password"
-                   iv-name="password"
-                   iv-label="password"
-                   iv-required="true"
-                   iv-maxlength="60"
-                   iv-minlength="2"
-                   />
+﻿<layout iv-source="Partial.html">
+    <content>
+        <form iv-type="form"
+              iv-title="Mask Sink"
+              iv-name="formValidation"
+              iv-model="ivContact"
+              iv-controller="Contact"
+              iv-action="add">
+            <fieldset>
+                <input iv-type="password"
+                       iv-name="password"
+                       iv-label="password"
+                       iv-required="true"
+                       iv-maxlength="60"
+                       iv-minlength="2" />
 
-            <input iv-type="password-confirm"
-                   iv-name="passwordConfirm"
-                   iv-label="password confirm"
-                   iv-required="true"
-                   iv-maxlength="60"
-                   iv-match="password"
-                   iv-minlength="2" />
+                <input iv-type="password-confirm"
+                       iv-name="passwordConfirm"
+                       iv-label="password confirm"
+                       iv-required="true"
+                       iv-maxlength="60"
+                       iv-match="password"
+                       iv-minlength="2" />
 
-           
 
-            <view iv-type="column" iv-size="2"></view>
-            <view iv-type="column" iv-size="3">
-                <button iv-type="submit" iv-name="submit" iv-label="Submit" />
-                <button iv-type="cancel" iv-name="cancel" iv-label="Reset" />
-            </view>
-            <button iv-type="done" iv-name="done" iv-label="Done" />
-        </fieldset>
-    </form>
-</content>
+
+                <view iv-type="column" iv-size="2"></view>
+                <view iv-type="column" iv-size="3">
+                    <button iv-type="submit" iv-name="submit" iv-label="Submit" />
+                    <button iv-type="cancel" iv-name="cancel" iv-label="Reset" />
+                </view>
+                <button iv-type="done" iv-name="done" iv-label="Done" />
+            </fieldset>
+        </form>
+    </content>
+</layout>
