--- a/iWork.Web.UI/iView/kitchensink/form-validation.html
+++ b/iWork.Web.UI/iView/kitchensink/form-validation.html
@@ -20,7 +20,7 @@
 
             <input iv-type="text"
                    iv-name="textmask"
-                   iv-label="Mask '9999-99-99'"
+                   iv-label="Mask 9999-99-99"
                    iv-required="true"
                    iv-maxlength="60"
                    iv-minlength="2"
@@ -64,8 +64,8 @@
 
             <view iv-type="column" iv-size="2"></view>
             <view iv-type="column" iv-size="3">
-                <button iv-type="submit" iv-name="submit" iv-label="Submit" />
-                <button iv-type="cancel" iv-name="cancel" iv-label="Reset" />
+                <button iv-type="submit" iv-name="submit" />
+                <button iv-type="cancel" iv-name="cancel" />
             </view>
             <button iv-type="done" iv-name="done" iv-label="Done" />
 
