--- a/iWork.Web.UI/iView/kitchensink/form.html
+++ b/iWork.Web.UI/iView/kitchensink/form.html
@@ -59,7 +59,7 @@
 
             <uploader iv-type="dropzone" iv-label="File Uplaoder"></uploader>
 
-            <button iv-type="submit" iv-name="submit" iv-label="Submit" />
+            <button iv-type="submit" iv-name="submit"  />
         </form>
     </content>
 </layout>
