--- a/iWork.Web.UI/iView/kitchensink/kitchensink.html
+++ b/iWork.Web.UI/iView/kitchensink/kitchensink.html
@@ -26,12 +26,12 @@
                 iv-viewname="password"></button>
     </sidecontent>
     <content>
-        <view iv-type="partial" iv-href="/kitchensink/form" iv-name="kithenForm"></view>
-        <view iv-type="partial" iv-href="/kitchensink/grid-observer" iv-name="gridObserver"></view>
-        <view iv-type="partial" iv-href="/kitchensink/grid-ajax" iv-name="gridAjax"></view>
-        <view iv-type="partial" iv-href="/kitchensink/form-validation" iv-name="formValidation"></view>
-        <view iv-type="partial" iv-href="/kitchensink/mask" iv-name="mask"></view>
-        <view iv-type="partial" iv-href="/kitchensink/password" iv-name="password"></view>
+        <view iv-title="pageTitle.kitchensink" iv-type="partial" iv-href="/kitchensink/form" iv-name="kithenForm"></view>
+        <view iv-title="pageTitle.kitchensink" iv-type="partial" iv-href="/kitchensink/grid-observer" iv-name="gridObserver"></view>
+        <view iv-title="pageTitle.kitchensink" iv-type="partial" iv-href="/kitchensink/grid-ajax" iv-name="gridAjax"></view>
+        <view iv-title="pageTitle.kitchensink" iv-type="partial" iv-href="/kitchensink/form-validation" iv-name="formValidation"></view>
+        <view iv-title="pageTitle.kitchensink" iv-type="partial" iv-href="/kitchensink/mask" iv-name="mask"></view>
+        <view iv-title="pageTitle.kitchensink" iv-type="partial" iv-href="/kitchensink/password" iv-name="password"></view>
         <view iv-type="contentview">
         </view>
     </content>
