--- a/iWork.Web.UI/iView/kitchensink/password.html
+++ b/iWork.Web.UI/iView/kitchensink/password.html
@@ -9,14 +9,12 @@
             <fieldset>
                 <input iv-type="password"
                        iv-name="password"
-                       iv-label="password"
                        iv-required="true"
                        iv-maxlength="60"
                        iv-minlength="2" />
 
                 <input iv-type="password-confirm"
                        iv-name="passwordConfirm"
-                       iv-label="password confirm"
                        iv-required="true"
                        iv-maxlength="60"
                        iv-match="password"
@@ -26,8 +24,8 @@
 
                 <view iv-type="column" iv-size="2"></view>
                 <view iv-type="column" iv-size="3">
-                    <button iv-type="submit" iv-name="submit" iv-label="Submit" />
-                    <button iv-type="cancel" iv-name="cancel" iv-label="Reset" />
+                    <button iv-type="submit" iv-name="submit"  />
+                    <button iv-type="cancel" iv-name="cancel" />
                 </view>
                 <button iv-type="done" iv-name="done" iv-label="Done" />
             </fieldset>
