--- a/iWork.Web.UI/iView/kitchensink/mask.html
+++ b/iWork.Web.UI/iView/kitchensink/mask.html
@@ -9,7 +9,7 @@
             <fieldset>
                 <input iv-type="text"
                        iv-name="textmask"
-                       iv-label="Mask '9999-99-99'"
+                       iv-label="Mask 9999-99-99"
                        iv-required="true"
                        iv-maxlength="60"
                        iv-minlength="2"
@@ -17,7 +17,7 @@
 
                 <input iv-type="text"
                        iv-name="textmaskpattern"
-                       iv-label="Mask '99 A *****'"
+                       iv-label="Mask 99 A *****"
                        iv-required="true"
                        iv-maxlength="60"
                        iv-minlength="2"
