Add French Language, set lang in cookie

--- a/iWork.Web.UI/iView/kitchensink/grid-ajax.html
+++ b/iWork.Web.UI/iView/kitchensink/grid-ajax.html
@@ -1,7 +1,7 @@
 ﻿<layout iv-source="Partial.html">
     <content>
         <grid iv-type="datatables"
-              iv-title="Ajax Grid"
+              iv-title="kitchensink.ajaxGrid"
               iv-name="ajaxGrid"
               iv-controller="Contact"
               iv-url="/content/sample_data/grid.json"
