--- a/iWork.Web.UI/iView/kitchensink/grid-observer.html
+++ b/iWork.Web.UI/iView/kitchensink/grid-observer.html
@@ -1,7 +1,7 @@
 ﻿<layout iv-source="Partial.html">
     <content>
         <form iv-type="form"
-              iv-title="Observer gird example"
+              iv-title="global.grid"
               iv-name="contactSearchForm"
               iv-controller="Contact"
               iv-model="Contact"
