--- a/iWork.Web.UI/iView/kitchensink/kitchensink.html
+++ b/iWork.Web.UI/iView/kitchensink/kitchensink.html
@@ -2,27 +2,27 @@
     <sidecontent>
         <button iv-type="iconic"
                 button iv-icon="wand"
-                button iv-label="Form"
+                button iv-label="global.form"
                 button iv-viewname="kithenForm"></button>
         <button iv-type="iconic"
-                button iv-icon="grid"
-                button iv-label="Observer Grid"
+                button iv-icon=grid"
+                button iv-label="global.grid"
                 button iv-viewname="gridObserver"></button>
         <button iv-type="iconic"
                 button iv-icon="loader"
-                button iv-label="Ajax Grid"
+                button iv-label="kitchensink.ajaxGrid"
                 button iv-viewname="gridAjax"></button>
         <button iv-type="iconic"
                 button iv-icon="puzzle"
-                button iv-label="Form Validation"
+                button iv-label="kitchensink.formValidatin"
                 button iv-viewname="formValidation"></button>
         <button iv-type="iconic"
                 button iv-icon="mask"
-                button iv-label="Form Mask"
+                button iv-label="kitchensink.formMask"
                 button iv-viewname="mask"></button>
         <button iv-type="iconic"
                 iv-icon="key"
-                iv-label="Password"
+                iv-label="global.password"
                 iv-viewname="password"></button>
     </sidecontent>
     <content>
