--- a/iWork.Web.UI/iView/kitchensink/password.html
+++ b/iWork.Web.UI/iView/kitchensink/password.html
@@ -1,7 +1,7 @@
 ﻿<layout iv-source="Partial.html">
     <content>
         <form iv-type="form"
-              iv-title="Mask Sink"
+              iv-title="global.form"
               iv-name="formValidation"
               iv-model="ivContact"
               iv-controller="Contact"
