--- a/iWork.Web.UI/iView/kitchensink/form-validation.html
+++ b/iWork.Web.UI/iView/kitchensink/form-validation.html
@@ -1,7 +1,7 @@
 ﻿<layout iv-source="Partial.html">
     <content>
         <form iv-type="form"
-              iv-title="Validation Sink"
+              iv-title="kitchensink.formValidatin"
               iv-name="formValidation"
               iv-model="ivContact"
               iv-controller="Contact"
