--- a/iWork.Web.UI/iView/kitchensink/form.html
+++ b/iWork.Web.UI/iView/kitchensink/form.html
@@ -1,7 +1,7 @@
 ﻿<layout iv-source="Partial.html">
     <content>
         <form iv-type="form"
-              iv-title="Form"
+              iv-title="global.form"
               iv-name="sampleForm"
               iv-controller="Contact"
               iv-model="Contact"
